calculator.css
* {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
} 
html, body {
  font-family: 'Orbitron', sans-serif;
  height: 100%;
  width: 100%;
  background-color: #DECEC7;
  font-size: 14px;
  line-height: 1.6;
}

#calculator {
  height: 450px;
  width: 320px;
  margin-top: 20%;
  margin-right: auto;
  margin-left: auto;
  /*border: solid 1px #B3B5BE;*/
  padding: 10px;
  background-color: #D1D2D6;
  border-radius: 20px;
  box-shadow: 6px 9px 30px 0 rgba(0, 0, 0, 0.68), inset -2px -5px 15px 0 #584c46;
}

#output {
  border: solid 2px #B3B5BE;
  border-radius: 7px;
  text-align: right;
  height: 90px;
  width: 90%;
  margin: 20px auto;
  padding: 10px;
  background-color: #D6E1E3;
  font-size: 16px;
  font-weight: bold;
}

#input {
  display: inline-block;
  position: absolute;
  width: 280px;
  height: auto;
  margin-top: 15px;
  margin-left: 5px;
}

#result {
  font-size: 35px;
}

.btn {
  font-family: 'Orbitron', sans-serif;
  height: 40px;
  width: 55px;
  margin: 0px 4px 12px 8px;
  border-radius: 7px;
  font-weight: bold;
  font-size: 20px;
  background-color: #515473;
  box-shadow: 0 3px #2D304E;
  border: 1px solid transparent;
  vertical-align: middle;
  padding: 6px 12px;
  line-height: 1.42857143;
  overflow: visible;
  white-space: nowrap;
}

.btn, .btn:hover, .btn:active, .btn:focus, .btn:active:focus {
  color: #FFF;
  outline: none;
}

.btn:active {
  box-shadow: 0 0px;
  transform: translateY(3px);
}

.operator {
  background-color: #535F6B;
  box-shadow: 0 3px #313D48;
}

.clear {
  background-color: #D27182;
  box-shadow: 0 3px #9D2F42;
}

#clear-all {
  width: 126px
}

#plus {
  height: 90px;
  margin-top: -50px;
}

